reduce  padding to stop overlapping

--- a/app/styles/app/_code-highlight.scss
+++ b/app/styles/app/_code-highlight.scss
@@ -4,7 +4,7 @@ p code,
 td code {
   background-color: $color_nhsuk-white;
   color: #d14; // sass-lint:disable-line no-color-hex no-color-literals
-  padding: nhsuk-spacing(1) nhsuk-spacing(2);
+  padding: 2px nhsuk-spacing(2);
   word-break: break-word;
 }
 
